--- a/asset/sass/main.scss
+++ b/asset/sass/main.scss
@@ -1,6 +1,18 @@
 
 //Helper
+@import "./Helper/variables";
 @import "./Helper/minxin";
 
-//Page
+//Base
+@import "./Base/reset";
+
+//Layout
 @import "./Layouts/header";
+
+//Pages
+@import "./Pages/login";
+@import "./Pages/signup";
+@import "./Pages/detail";
+
+//Components
+@import "./Components/button";
