--- a/asset/sass/Helper/_variables.scss
+++ b/asset/sass/Helper/_variables.scss
@@ -2,7 +2,7 @@
 $color-dark-1: #000000;
 $color-dark-2: #333333;
 $color-dark-3: #58666e;
-$color-dark-3: #e5e5e5;
+$color-dark-4: #e5e5e5;
 $color-white-1: #fff;
 $color-white-2:#f9f9f9;
 $color-red-1: #CF3341;
@@ -23,7 +23,7 @@ $fw-3: 700;
 $pd-1: 10px;
 $pd-2: 16px;
 $pd-3: 18px;
-
+$pd-4: 25px;
 
 //letter spacing
 $ls-1: 0.5px;
