git commit -m "detail.css"

--- a/asset/sass/Pages/_detail.scss
+++ b/asset/sass/Pages/_detail.scss
@@ -34,10 +34,8 @@
     }
 
     h4 {
-        @include styleText($color-dark-1, $fs-3, $fw-2)
+        @include styleText($color-dark-1, $fs-3, $fw-2);
     }
-
-    .size-area {}
 
     form {
         label {
